--- a/WebsiteStyles.css
+++ b/WebsiteStyles.css
@@ -82,9 +82,7 @@
     background-image: none;
     color: #0b6326;
     height: 350px;
-    width: 600px;
-    
-    display: inline-block;
+       
   }
 
   .carousel-indicators li {
@@ -92,6 +90,8 @@
     height: 8px;
     width: 8px;
     display: inline-block;
+    position:relative;
+    top: 50px;
      }
   
    .carousel-indicators li.active {
@@ -99,15 +99,15 @@
     height: 10px;
     width: 10px;
     display: inline-block;
-    
+    position: relative;
+    top: 50px;
     }
 
   .carousel-inner {
-     border-radius: 50% !important;
+     border-radius: 50%;
      height: 350px;
      width: 350px;
-     display:inline-block;
-     position:static;
+     margin: auto;
 }
 
 .navbar {
