--- a/MyWebApp/MongoliaStyles.css
+++ b/MyWebApp/MongoliaStyles.css
@@ -1,4 +1,4 @@
-#mapId 
+#mapId, 
 body {
     padding: 0;
     margin: 0;
@@ -41,6 +41,17 @@ margin: 0;
     background-color: rgb(0, 0, 0);
     color: rgb(0, 0, 0);
 }
+
+#button {
+  background-color: black;
+  color: black;
+  border: none;
+  border-radius: 10px;
+  position: relative;
+  left: 15%;
+  margin-top: 5%;
+}
+
 
 .Titles {
     color: white;
@@ -349,15 +360,6 @@ tr:hover {
   width: 10px;
   background-color:rgb(105, 1, 0);
   border:3px solid rgba(0, 18, 204);
-  border-radius: 50%;
-  display: inline-block
-}
-
-#Buforaddei {
-  height: 10px;
-  width: 10px;
-  background-color:rgb(105, 1, 0);
-  border:3px solid rgba(229, 132, 0);
   border-radius: 50%;
   display: inline-block
 }
@@ -1383,15 +1385,6 @@ tr:hover {
   height: 10px;
   width: 10px;
   background-color:rgb(102, 7, 246);
-  border:3px solid rgba(255, 255, 255);
-  border-radius: 50%;
-  display: inline-block
-}
-
-#Tamiassibiricus {
-  height: 10px;
-  width: 10px;
-  background-color:rgb(0, 167, 255);
   border:3px solid rgba(255, 255, 255);
   border-radius: 50%;
   display: inline-block
