--- a/MyWebApp/MongoliaStyles.css
+++ b/MyWebApp/MongoliaStyles.css
@@ -427,7 +427,7 @@ tr:hover {
   display: inline-block
 }
 
-#Clethrionomysrufocanus {
+#Craseomysrufocanus {
   height: 10px;
   width: 10px;
   background-color:rgb(0, 0, 0);
@@ -490,7 +490,7 @@ tr:hover {
   display: inline-block
 }
 
-#Cricetulusmigratorius {
+#Nothocricetulusmigratorius {
   height: 10px;
   width: 10px;
   background-color:rgb(0, 18, 204);
@@ -796,7 +796,7 @@ tr:hover {
   display: inline-block
 }
 
-#Microtusfortis {
+#Alexandromysfortis {
   height: 10px;
   width: 10px;
   background-color:rgb(0, 206, 162);
@@ -805,7 +805,7 @@ tr:hover {
   display: inline-block
 }
 
-#Microtusfortiscf {
+#Alexandromysfortiscf {
   height: 10px;
   width: 10px;
   background-color:rgb(0, 206, 162);
@@ -814,7 +814,7 @@ tr:hover {
   display: inline-block
 }
 
-#Microtusgregalis {
+#Stenocraniusgregalis {
   height: 10px;
   width: 10px;
   background-color:rgb(0, 206, 162);
@@ -823,7 +823,7 @@ tr:hover {
   display: inline-block
 }
 
-#Microtusgregaliscf {
+#Stenocraniusgregaliscf {
   height: 10px;
   width: 10px;
   background-color:rgb(0, 206, 162);
@@ -832,7 +832,7 @@ tr:hover {
   display: inline-block
 }
 
-#Microtuslimnophilus {
+#Alexandromyslimnophilus {
   height: 10px;
   width: 10px;
   background-color:rgb(0, 206, 162);
@@ -841,7 +841,7 @@ tr:hover {
   display: inline-block
 }
 
-#Microtusmaximowiczii {
+#MAlexandromysmaximowiczii {
   height: 10px;
   width: 10px;
   background-color:rgb(0, 206, 162);
@@ -850,7 +850,7 @@ tr:hover {
   display: inline-block
 }
 
-#Microtusmaximowicziicf {
+#Alexandromysmaximowicziicf {
   height: 10px;
   width: 10px;
   background-color:rgb(0, 206, 162);
@@ -859,7 +859,7 @@ tr:hover {
   display: inline-block
 }
 
-#Microtusmongolicus {
+#Alexandromysmongolicus {
   height: 10px;
   width: 10px;
   background-color:rgb(0, 206, 162);
@@ -868,7 +868,7 @@ tr:hover {
   display: inline-block
 }
 
-#Microtusmongolicuscf {
+#Alexandromysmongolicuscf {
   height: 10px;
   width: 10px;
   background-color:rgb(0, 206, 162);
@@ -877,7 +877,7 @@ tr:hover {
   display: inline-block
 }
 
-#Microtusoeconomus {
+#Alexandromysoeconomus {
   height: 10px;
   width: 10px;
   background-color:rgb(103, 19, 215);
@@ -886,7 +886,7 @@ tr:hover {
   display: inline-block
 }
 
-#Microtusoeconomuscf {
+#Alexandromysoeconomuscf {
   height: 10px;
   width: 10px;
   background-color:rgb(103, 19, 215);
