--- a/MyWebApp/MongoliaStyles.css
+++ b/MyWebApp/MongoliaStyles.css
@@ -580,7 +580,7 @@ tr:hover {
   display: inline-block
 }
 
-#Eptesicusnilssoni {
+#Eptesicusnilssonii {
   height: 10px;
   width: 10px;
   background-color:rgb(229, 132, 0);
@@ -625,7 +625,7 @@ tr:hover {
   display: inline-block
 }
 
-#Gazellasubgutterosa {
+#Gazellasubgutturosa {
   height: 10px;
   width: 10px;
   background-color:rgb(247, 255, 1);
@@ -1075,7 +1075,7 @@ tr:hover {
   display: inline-block
 }
 
-#Ochotonapallasi {
+#Ochotonapallasii {
   height: 10px;
   width: 10px;
   background-color:rgb(255, 255, 255);
